--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -4,11 +4,16 @@ on:
   schedule: # execute every 12 hours
     - cron: "* */12 * * *"
 
-  workflow_dispatch:
+  workflow_dispatch: # allow manual triggering with optional inputs
+    inputs:
+      year:
+        description: "Contribution year (leave empty for current year)"
+        required: false
+        default: "2024"
 
   push:
     branches:
-    - master
+      - master
 
 jobs:
   generate:
@@ -18,14 +23,17 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: generate snake.svg
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: dist/snake.svg?palette=github-dark
+          year: ${{ github.event.inputs.year || '' }} # Use specified year or default to current year
 
-
-      - name: push snake.svg to the output branch
+      - name: Push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
